# LLM-Werewolf

./: README.md  pyproject.toml
src/: main.py  test_llm.ipynb
src/extras/: personality_traits.json
src/game/: chat.py  game_engine.py  game_state.py  phases.py  roles.json  roles.py
src/llm/: llm_handler.py
src/llm/prompts/: debate_phase.txt  last_words.txt  voting_phase.txt  werewolf_meeting.txt  werewolf_vote.txt
src/player/: ai_player.py  base_player.py  human_player.py  llm_player.py
src/utils/: chat_utils.py
